--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebCrypt</title>
-    <script src="http://bitwiseshiftleft.github.io/sjcl/sjcl.js"></script>
+    <script src="sjcl.js"></script>
     <style>
         * {
             font-family: monotype;
